--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<body>
 		<h1>Manhattan Cafe</h1>
 
-	<img src="/img/323793aa0e86ebde2a4ada672a84a0d0538d5f34.jpg" alt="manhattan_cafe">
+	<img src='img/cafe1.jpg' alt='manhattan_cafe'/>
 	</body>
 </html>
