create about page and link in main

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	</head>
 	<body>
 		<h1>Manhattan Cafe</h1>
+		<a href="about/about.html" align="right">Author</a>
 
-	<img src='img/cafe1.jpg' alt='manhattan_cafe'/>
+	<img src='img/cafe1.jpg' alt='manhattan_cafe' width='500'/>
 	</body>
 </html>
